syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/reymooy27/arena-backend/payment-service/proto";

package proto;

message ArenaRequest {
  string name = 1;
  string description = 2;
}

message ArenaResponse {
  string message = 1;
  bool success = 2;
}

message GetArenaRequest {
  int64 arena_id = 1;
}

message UpdateArenaRequest {
  int64 arena_id = 1;
  string name = 2;
  string description = 3;
}

message ArenaData {
  int64 arena_id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
}

message ListArenaResponse {
  repeated ArenaData arenas = 1;
}

service ArenaService {
  rpc CreateArena(ArenaRequest) returns (ArenaResponse);
  rpc DeleteArena(GetArenaRequest) returns (ArenaResponse);
  rpc UpdateArena(UpdateArenaRequest) returns (ArenaResponse);
  rpc GetArenaById(GetArenaRequest) returns (ArenaData);
  rpc GetArenas(google.protobuf.Empty) returns (ListArenaResponse);
}
